# hermit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gitignore  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
hermit/: __main__.py  app.py  cli.py  media.py  store.py
hermit_msg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_base.py  test_media.py  test_store.py
