[metadata]
name = hermit-msg
version = 0.1.0
description = Distraction-free unified messaging CLI for your terminal
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    playwright>=1.40.0
    rich>=13.0.0

[options.entry_points]
console_scripts =
    hermit = hermit.cli:run

[options.packages.find]
include = hermit*